--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li>Pepperoni</li>
       <li>Mozzarella Cheese</li>
       <li>Mushrooms</li>
+	  <li>X-Cheese</li>
     </ul>
   </div>
 </div>
